removing translate feature dependancy

--- a/.gitignore
+++ b/.gitignore
@@ -116,4 +116,7 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+# logs
+*.log
+
 # End of https://www.toptal.com/developers/gitignore/api/python
